--- a/static/log_in.css
+++ b/static/log_in.css
@@ -34,8 +34,8 @@ html,body{
 .wrapper{
   padding: 20px; 
   width: 500px;
-  border-radius: 2px;
-  box-shadow: 0 0 1px 
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .welcoming {
