--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -46,7 +46,7 @@ html,body{
   padding: 8px;
   box-sizing: border-box;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 5px;
 }
 
 .form-row {
@@ -82,4 +82,4 @@ html,body{
 
 .open span:hover {
   text-decoration: none; 
-}
+}}
