--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
-    <link rel="stylesheet" href="/static/sign_up.css">
+    <link rel="stylesheet" href="{{ url_for('static',  filename='css/sign_up.css') }}">
   </head>
   <body>
     <div class="container">
       <h2 class="acct">Create an Account</h2>
-      <form action="#" method="post">
+      <form action="" method="POST">
   
         <div class="form-row">
           <div class="form-group">
@@ -40,7 +40,7 @@
   
         <button type="submit" class="btn-primary">Sign Up</button>
         <div class="open">
-            Already have an Account? <span>Sign in</span>
+            Already have an Account? <a href="/login"><span>Sign in</span></div></a>
         </div>
       </form>
     </div>
