--- a/website/templates/log_in.html
+++ b/website/templates/log_in.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="/static/log_in.css">
   </head>
   <body>
+    <!-- {% with messages = get_flashed_messages(with_categories = true)%}
+      {% if messages %}
+          {% for category, message in messages %}
+          {% if category == "error" %}
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+          {% else %}
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="close" data-dismiss="alert">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          {% endif %}
+          {% endfor %}
+      {% endif %}
+    {% endwith %} -->
     <header class="highlight-box">
       <h1>TaskFlowPro</h1>
     </header>
