--- a/static/sign_up.css
+++ b/static/sign_up.css
@@ -32,6 +32,8 @@ html,body{
 }
 .form-group {
   margin-bottom: 15px;
+  position: relative;
+  margin-bottom: 1.25rem;
   
 }
 
@@ -56,6 +58,22 @@ html,body{
 
 .form-row .form-group {
   width: 48%; /* Adjust as needed, considering padding and border */
+}
+
+
+.toggle{
+  background: none;
+  border: none;
+  color: #337ab7;
+  font-weight: 600;
+  position: absolute;
+  right: .75rem;
+  top: 2.50rem;
+  z-index: 9;
+}
+
+.fa{
+  font-size: 1rem;
 }
 
 .btn-primary {
