--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/static/sign_up.css">
+
   </head>
   <body>
     <div class="container">
@@ -26,23 +28,37 @@
         <div class="form-group">
           <label for="email">Email Address</label>
           <input type="email" id="email" name="email" placeholder="Enter Email Address" required>
+          <span class="warning" id="emailWarning"></span>
         </div>
   
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" placeholder="Enter Password" required>
+          <input type="password" id="txtPassword1" name="password" placeholder="Enter Password" required>
+          <button type="button" id="btnToggle1" class="toggle">
+            <i id="btnToggle1" class="fa fa-eye"></i>
+          </button>
+          <!-- <span class="warning" id="passwordWarning"></span> -->
         </div>
   
         <div class="form-group">
           <label for="confirmPassword">Confirm Password</label>
-          <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
+          <input type="password" id="txtPassword2" name="confirmPassword" placeholder="Confirm Password" required>
+          <button type="button" id="btnToggle2" class="toggle">
+            <i id="btnToggle2" class="fa fa-eye"></i>
+          </button>
+          
         </div>
-  
+      <a href="../templates/dashboard.html">
         <button type="submit" class="btn-primary">Sign Up</button>
+      </a>
         <div class="open">
             Already have an Account? <span>Sign in</span>
         </div>
       </form>
     </div>
-  
+
+    </body>
+
+    <script src="../static/sign_up.js">
+    </script>
 </html>
