--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -30,6 +30,9 @@
       
     <div class="row">
       <div class="pass"><a href="#">Forget Password</a></div>
+    </div>
+
+    <div class="row">
       <input type="submit" value="Sign in">
     </div>
 
