--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -3,27 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dashboard.com</title>
+    <title>TaskFlowPro Dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static',  filename='css/dashboard.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    
-
-
-<nav>
-    <ul class="flex-container">
-        <li><a href="/">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="Service.html">Service</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="sign_up.html">Contact</a></li>
-    </ul>
-</nav>
-
-
-<Label class="lab">Dashboard</Label>
-
-
-
+    <header>
+        <h1>TaskFlowPro</h1>
+        <nav>
+            <ul>
+                <li><a href="#">History</a></li>
+                <li><a href="#">All Tasks</a></li>
+                <li><a href="/logout">Log Out</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Upcoming Tasks</h2>
+        <ul>
+            {% for task in tasks %}
+                <li>
+                    <span class="task-title">{{ task.title }}</span>
+                    <span class="due-date">Due: {{ task.end }}</span>
+                </li>
+            {% endfor %}
+        </ul>
+        <button class="btn btn-primary" type="button"><a class="link-light" href="/create_task">Add a new task</a></button>
+        <br></br>
+    <footer>
+        <p>&copy; 2024 TaskFlowPro</p>
+    </footer>
 </body>
 </html>
