--- a/website/templates/log_in.html
+++ b/website/templates/log_in.html
@@ -4,30 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static',  filename='css/log_in.css') }}">
   </head>
   <body>
-    <!-- {% with messages = get_flashed_messages(with_categories = true)%}
-      {% if messages %}
-          {% for category, message in messages %}
-          {% if category == "error" %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-          {% else %}
-          <div class="alert alert-danger alert-dismissible fade show" role="alert">
-              {{ message }}
-              <button type="button" class="close" data-dismiss="alert">
-                  <span aria-hidden="true">&times;</span>
-              </button>
-          </div>
-          {% endif %}
-          {% endfor %}
-      {% endif %}
-    {% endwith %} -->
     <header class="highlight-box">
       <h1>TaskFlowPro</h1>
     </header>
@@ -35,28 +15,28 @@
     <div class="wrapper">
       
       <div class="welcoming">Welcome back, Sign in</div>
-      <form action="#">
+      <form action="/login", method="POST">
 
-    <div class="row">
-      <label for="text" class="above-input">Email or Phone</label>
-      <input type="text" id="text" name="password" placeholder="Enter Email or Phone" required>
-    </div>
-        
-    <div class="row">
-      <label for="password" class="above-input">Password</label>
-      <input type="password" id="password" name="password" placeholder="Enter Password" required>
-    </div>
-  
-    
+        <div class="row">
+          <label for="text" class="above-input">Email or Phone</label>
+          <input type="text" id="email" name="email" placeholder="Enter Email or Phone" required>
+        </div>
+            
+        <div class="row">
+          <label for="password" class="above-input">Password</label>
+          <input type="password" id="password" name="password" placeholder="Enter Password" required>
+        </div>
       
-    <div class="row">
-      <div class="pass"><a href="#">Forget Password</a></div>
-      <input type="submit" value="Sign in">
-    </div>
+        
+          
+        <div class="row">
+          <div class="pass"><a href="#">Forget Password</a></div>
+          <input type="submit" value="Sign in">
+        </div>
 
-    <div class="open">
-      Don't have an account yet? <a href="/signup"><span>Sign Up</span></a>
-    </div>
+        <div class="open">
+          Don't have an account yet? <a href="/signup"><span>Sign Up</span></a>
+        </div>
       </form>
 
     </div>
