--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h2 class="acct">Create an Account</h2>
-      <form action="" method="POST">
+      <form action="/signup" method="POST">
   
         <div class="form-row">
           <div class="form-group">
