--- a/website/templates/create_task.html
+++ b/website/templates/create_task.html
@@ -43,8 +43,13 @@
     </div>
         
     <div class="row">
+      <label for="date" class="above-input">Start date</label>
+      <input type="datetime-local" id="startDate" name="startDate" placeholder="Enter the day you want to begin the task" required>
+    </div>
+
+    <div class="row">
       <label for="date" class="above-input">Due date</label>
-      <input type="date" id="dueDate" name="dueDate" placeholder="Enter Password" required>
+      <input type="datetime-local" id="dueDate" name="dueDate" placeholder="Enter the due date for your task" required>
     </div>
   
     
