feat: Added task start date

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -24,7 +24,7 @@
             {% for task in tasks %}
                 <li>
                     <span class="task-title">{{ task.title }}</span>
-                    <span class="due-date">Due: {{ task.end }}</span>
+                    <span class="due-date">To start: {{ task.start }}</span>
                 </li>
             {% endfor %}
         </ul>
