--- a/website/templates/log_in.html
+++ b/website/templates/log_in.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="../static/log_in.css">
+    <link rel="stylesheet" href="../static/css/log_in.css">
   </head>
   <body>
     <!-- {% with messages = get_flashed_messages(with_categories = true)%}
@@ -54,9 +54,6 @@
 
     </div>
 
-    <div class="open">
-      Don't have an account yet? <span>Sign Up</span>
-    </div>
       </form>
 
         <div class="open">
