--- a/website/templates/Task-list page.html
+++ b/website/templates/Task-list page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashboard.com</title>
-    <link rel="stylesheet" href="../static/Task-list page.css">
+    <link rel="stylesheet" href="../static/css/Task-list page.css">
 </head>
 
 <body>
