--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashboard.com</title>
-    <link rel="stylesheet" href="../static/dashboard.css">
+    <link rel="stylesheet" href="../static/css/dashboard1.css">
 </head>
 
 <body>
