--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -17,13 +17,13 @@
     <div class="container">
     <div class="sidenav">
     <ul class="das">
-        <li class="list"><a href="" class="dash">Dashboard</a></li>
+        <li class="list"><a href="/" class="dash">Dashboard</a></li>
         <li class="list"><a href="" class="history">Active Task</a></li>
         <li class="list"><a href="" class="signout">Completed Task</a></li>
     </ul>
 
     <ul class="dasb">
-        <li class="list"><a href="" class="signout">Sign Out</a></li>
+        <li class="list"><a href="/logout" class="signout">Sign Out</a></li>
     </ul>
 
     </div>
@@ -47,7 +47,7 @@
     </div>
 
 
-    <div class="task-group">
+    <!-- <div class="task-group">
         <h3> OverDue Task <span><input type="button" value="view all" class="btn"></span></h3> 
 
     </div>
@@ -70,32 +70,24 @@
                 <li>Task 3 <span class="date">15/01/2014</span></li>
             </ul>
         </div>
-    </div>
+    </div> -->
     
 
     <div class="task-group">
-        <h3> Today's Task <span><input type="button" value="view all" class="btn"></span></h3> 
+        <h3> Upcoming Task <span><a href="/create_task"><input type="button" value="Create a new task" class="btn"></a></span></h3> 
 
     </div>
 
     <div class="task-list">
         <div class="task">
             <ul class="task-details">
-                <li>Task 1 <span class="date">15/01/2014</span></li>
+                {% for task in user.tasks %}
+                <li>{{ task.title }}<span class="date">To start: {{ task.start }}</span></li>
+                {% endfor %}
             </ul>
         </div>
 
-        <div class="task">
-            <ul class="task-details">
-                <li>Task 2 <span class="date">15/01/2014</span></li>
-            </ul>
-        </div>
 
-        <div class="task">
-            <ul class="task-details">
-                <li>Task 3 <span class="date">15/01/2014</span></li>
-            </ul>
-        </div>
     </div>
     
 
