--- a/website/static/css/dashboard1.css
+++ b/website/static/css/dashboard1.css
@@ -115,11 +115,65 @@ html,body {
     margin-left: 8px;
     }
 
+.task-list {
+    color: black;
+}
 
 .task-group{
     display:block;
+    margin-top: 40px;
+    margin-bottom: 35px;
     }
 
-.task-group h2{
+.task-group h3{
     justify-content: space-between;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
+
+.detail li{
+    padding: 3px 7px 3px 7px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 19px;
+
+}
+.task-details{
+    background-color: #D9D9D9;
+    height: 50px;
+    display: block;    
+    margin-bottom: 30px;
+    color: black;
+    padding: 3px 7px 3px 70px;
+    }
+
+.task-wrapper{
+    padding:0px 40px 0px 40px;
+    justify-content: space-between;
+    display: flex;
+}
+    
+/* .task-details{
+        padding: 7px 3px 7px 3px;
+        color: black;
+        font-size: 16px;
+        font-family: Arial, Helvetica, sans-serif;
+        margin-left: 30px;
+    } */
+    
+
+.btn {
+    background-color: #2A7FFF;
+    border: none;
+    color: #fff;
+    padding: 3px;
+    height: 32px;
+    width: 60px;
+    float: right;
+    border-radius: 3px;
+    font-size: 14px;
+    cursor: pointer;
+} 
+
+
+
