--- a/website/static/css/dashboard.css
+++ b/website/static/css/dashboard.css
@@ -58,6 +58,10 @@ body {
     align-items: center;
   }
   
+  .edit-icon {
+    margin-right: 1rem;
+    cursor: pointer;
+  }
   .task-title {
     flex-grow: 1;
   }
