--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -32,17 +32,45 @@
     <di3v class="box-group">
     <div class="info-box">
         <p class="comp">All Task</p>
-        <p class="num">30</p>
+        <p class="num">
+            {% set all_tasks = [] %}
+
+            {% for task in user.tasks %}
+                {% set _ = all_tasks.append(task) %}
+            {% endfor %}
+
+            {{ all_tasks|length }}
+        </p>
     </div>
 
     <div class="info-box">
         <p class="comp">Completed Task</p>
-        <p class="num">30</p>
+        <p class="num">
+            {% set completed_tasks = [] %}
+
+            {% for task in user.tasks %}
+                {% if task.status == "completed" %}
+                    {% set _ = completed_tasks.append(task) %}
+                {% endif %}
+            {% endfor %}
+
+            {{ completed_tasks|length }}
+        </p>
     </div>
 
     <div class="info-box">
         <p class="comp">Uncompleted Task</p>
-        <p class="num">30</p>
+        <p class="num">
+            {% set uncompleted_tasks = [] %}
+
+            {% for task in user.tasks %}
+                {% if task.status == "uncompleted" %}
+                    {% set _ = uncompleted_tasks.append(task) %}
+                {% endif %}
+            {% endfor %}
+
+            {{ uncompleted_tasks|length }}
+        </p>
     </div>
     </di3v>
 
