--- a/website/static/css/create_task.css
+++ b/website/static/css/create_task.css
@@ -99,3 +99,11 @@ input[type="submit"] {
   color: black;
 }
 
+@media only screen and (max-width: 450px) {
+  .wrapper{
+    padding: 20px; 
+    width: 350px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+}
