--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -29,8 +29,8 @@
     <div class="sidenav">
     <ul class="das">
         <li class="list"><a href="/" class="dash">Dashboard</a></li>
-        <li class="list"><a href="../templates/active_tasks.html" class="history">Active Task</a></li>
-        <li class="list"><a href="../templates/completed_task.html" class="signout">Completed Task</a></li>
+        <li class="list"><a href="/active_task" class="history">Active Task</a></li>
+        <li class="list"><a href="/completed_task" class="signout">Completed Task</a></li>
     </ul>
 
     <ul class="dasb">
