--- a/website/templates/edit_task.html
+++ b/website/templates/edit_task.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       
       <div class="welcoming">Edit a task</div>
-      <form action="{{task_url}}", method="POST">
+      <form action="/edit_task/{{task.id}}", method="POST">
 
     <div class="row">
       <label for="title" class="above-input">Title</label>
