--- a/website/templates/log_in.html
+++ b/website/templates/log_in.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
     <link rel="stylesheet" href="../static/css/log_in.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"> -->
   </head>
   <body>
     <!-- {% with messages = get_flashed_messages(with_categories = true)%}
@@ -13,14 +14,14 @@
           {% if category == "error" %}
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
                 {{ message }}
-                <button type="button" class="close" data-dismiss="alert">
+                <button type="button" class="close" data-bs-dismiss="alert">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
           {% else %}
           <div class="alert alert-danger alert-dismissible fade show" role="alert">
               {{ message }}
-              <button type="button" class="close" data-dismiss="alert">
+              <button type="button" class="close" data-bs-dismiss="alert">
                   <span aria-hidden="true">&times;</span>
               </button>
           </div>
