feat: Mades some changes

--- a/website/templates/active_tasks.html
+++ b/website/templates/active_tasks.html
@@ -19,7 +19,7 @@
     <ul class="das">
         <li class="list"><a href="/" class="dash">Dashboard</a></li>
         <li class="list"><a href="" class="history">Active Task</a></li>
-        <li class="list"><a href="" class="signout">Completed Task</a></li>
+        <li class="list"><a href="/completed_task" class="signout">Completed Task</a></li>
     </ul>
 
     <ul class="dasb">
