feat: Made some changes in signup.html and login.html

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -57,7 +57,7 @@
   
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="txtPassword1" name="password" placeholder="Enter Password" required>
+          <input type="password" id="txtPassword1" name="password" placeholder="Password must be at least 8 characters" required>
           <button type="button" id="btnToggle1" class="toggle">
             <i id="btnToggle1" class="fa fa-eye"></i>
           </button>
