--- a/website/templates/log_in.html
+++ b/website/templates/log_in.html
@@ -40,7 +40,7 @@
 
         <div class="row">
           <label for="text" class="above-input">Email</label>
-          <input type="text" id="text" name="email" placeholder="Enter Email or Phone" required>
+          <input type="text" id="text" name="email" placeholder="Enter Email" required>
         </div>
             
         <div class="row">
