--- a/website/static/css/completed_task.css
+++ b/website/static/css/completed_task.css
@@ -63,16 +63,20 @@ html,body {
     cursor: pointer;
     }
 
-.sidenav a:hover{
-    background-color: #ededed;
-    color: #2A7FFF;
-    opacity: 0.8;
-
-}
-
-.sidenav a:active {
-    opacity: 0.5;
+    .sidenav a:hover{
+        color: #2c3e50;
+        opacity: 0.8;
+        transition: .5s;
+    
     }
+    
+    .sidenav a:active {
+        background: #cee2ff;
+        width: 30px;
+        height: 15px;
+        opacity: 0.5;
+        transition: .5s;
+        }
 
 .mainnav{
     margin: 20px;
@@ -82,20 +86,21 @@ html,body {
 
     }
 
-.box-group{
+.box-container {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     }
 
-
+    
 .info-box {
     height:200px;
-    width:23%;
+    width:calc(25% - 20px);
+    margin-right: 20px;
+    margin-bottom: 20px;
     background-color: #cee2ff;
     border: none;
     border-radius: 8px;
     justify-content: left;
-
     }
 
 
@@ -144,6 +149,7 @@ html,body {
     width: 50px;
     margin-left: 12px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .delete a{
@@ -190,3 +196,160 @@ html,body {
         font-size: 20px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
+
+        .checkbtn {
+            font-size: 30px;
+            color: #fff;
+            float: left;
+            line-height: 45px;
+            margin-left: 15px;
+            cursor: pointer;
+            display: none;
+        
+        }
+        
+        #check{
+            display: none;
+        }
+
+
+        @media only screen and (max-width: 952px) {
+            h1.logo{
+                font-size: 30px;
+                padding-right: 50px;
+            }
+        
+            .sidenav {
+                font-size: 16px;
+            }
+        
+        }
+        
+        @media only screen and (max-width: 1460px) {
+            .checkbtn{
+                display: block;
+            }
+        
+            li.task-details{
+                padding: 3px 3px 3px 3px;
+            }
+        
+            .detail li{
+                padding: 3px 7px 3px 7px;
+                color: black;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 16px;
+                
+            
+            }
+        
+            /* ul{
+                position: fixed;
+                width: 100%;
+                height: 100vh;
+                background: white;
+                top: 80px;
+                left: 0;
+                text-align: center;
+            } */
+        
+            div ul li a{
+                font-size: 20px;
+            }
+        
+            .sidenav {
+                width: 100%;
+                height: 100vh;
+                position: fixed;
+                top: 80px;
+                left: -100%;
+                margin: 0;
+                text-align: center;
+                background: #2c3e50;
+                transition: all .5s;
+            }
+        
+            div ul li {
+                display: block;margin: 30px 0;
+                line-height: 30px;
+            }
+            div ul li a{
+                font-size: 20px;
+            }
+        
+            /* ul li a:hover,a.active{
+                background: none;
+                color: pink;
+            } */
+            .mainnav{
+                width:100%;
+            }
+            .sidenav a, li{
+                padding: 18px;
+            }
+        
+            .sidenav a:hover, .sidenav a:active{
+                background: none;
+                color: #2A7FFF;
+            }
+            
+            .box-group {
+                flex-direction: column;
+                justify-content: center;
+                display: flex;
+                margin: 0 auto;
+                align-items: center;
+                width:100%;
+            }
+            /* .info-box {
+                width: 100%;
+                margin-bottom: 10px;
+                justify-content: center;
+                align-items: center;
+            } */
+        
+        }
+        
+        @media only screen and (max-width: 360px){
+            .task-group{
+                display:block;
+                margin-top: 40px;
+                margin-bottom: 35px;
+                }
+            
+            .task-group h3{
+                justify-content: space-between;
+                font-size: 16px;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                }
+        }
+        
+        
+        @media only screen and (max-width: 1149px){
+            .sidenav {
+                width: 100%;
+                height: 120vh;
+                position: fixed;
+                top: 70px;
+                
+            }
+        }
+        
+        @media only screen and (max-width: 1000px) {
+            .info-box {
+                width:calc(33.33% - 20px);
+            }
+        } 
+
+        @media only screen and (max-width: 875px) {
+            .info-box {
+                width:calc(50% - 20px);
+            }
+        } 
+
+        @media only screen and (max-width: 530px) {
+            .info-box {
+                width:calc(100% - 20px);
+            }
+        } 
+        
