--- a/website/static/css/dashboard1.css
+++ b/website/static/css/dashboard1.css
@@ -68,6 +68,8 @@ html,body {
     height:430px;
     background-color: rgb(0, 145, 255);
     margin:30px;
+    padding-top: 20px;
+    overflow-y: auto;
     overflow: hidden;
     border-radius: 5px;
     }
@@ -84,15 +86,22 @@ html,body {
     }
 
 .sidenav a:hover{
-    background-color: #ededed;
-    color: #2A7FFF;
+    color: #2c3e50;
     opacity: 0.8;
+    transition: .5s;
 
 }
 
 .sidenav a:active {
+    background: #cee2ff;
+    width: 30px;
+    height: 15px;
     opacity: 0.5;
+    transition: .5s;
     }
+
+    
+
 
 .mainnav{
     margin: 20px;
@@ -187,7 +196,7 @@ html,body {
     border: none;
     color: #fff;
     padding: 3px;
-    height: 32px;
+    height: 45px;
     width: 150px;
     float: right;
     border-radius: 3px;
